Fri Mar  3 11:32:34 2000 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* Fixed bugs regarding yesterday's changes. Even Leonardo da Vinci
	  used to commit errors, so  ...

Fri Mar  3 11:25:42 2000 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* testnet.cc: added the -r and -w options in order to set how many
	  times it retries to re-connect after a timeout occurs, and how long
	  it should wait after it.

Thu Mar  2 18:45:15 2000 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>

	* htnet/Connection.*: management of wait_time and number of retries
          after a timeout occurs.

        * htnet/Transport.*: Management of connection attributes above.

        * htdig/Server.*: Set members for managing timeout retries taken from
          the configuration file ("timeout", "tcp_max_retries", "tcp_wait_time").
          
        * htdig/Document.cc: Added the chance to configure on a server basis
          "persistent_connections", "head_before_get", "timeout",
          "tcp_max_retries", "tcp_wait_time". Changed Retrieve method accepting
          now a server object pointer: Retrieve (server*, HtDateTime).
          
        * htdig/Retriever.cc: Added the chance to configure on a server basis
          "max_connection_requests" attribute.
        
        * htcommon/defaults.cc: Added "tcp_max_retries", "tcp_wait_time" -- Need
          to be go over by someone who speaks english better than me. Not a hard
          work !!! ;-)
        
Wed Mar  1 17:01:09 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc (excerpt, hilight): move SGML encoding into
	hilight() function, because when it's done earlier it breaks
	highlighting of accented characters.

Wed Mar  1 16:02:49 2000  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/htfuzzy.cc (main): Correctly test return value on Open()
	of word database, include db name in error message if Open() fails,