@@ -1,3 +1,10 @@
+Sat Mar 04 19:41:49 2000  Loic Dachary  <loic@ceic.com>
+
+	* db/mp/mp_cmpr.c (__memp_cmpr_free_chain): clear BH_CMPR
+	  flag. Was causing core dumps, thanks to 
+	  Peter Marelas maral@phase-one.com.au for providing 
+	  a simple case to reproduce the error.
+
 Fri Mar  3 11:32:34 2000 CEST Gabriele Bartolini  <g.bartol@comune.prato.it>
 
 	* Fixed bugs regarding yesterday's changes. Even Leonardo da Vinci
